<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DeltaTimer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start</string>
    <string name="digi">Digital</string>
    <string name="timer">0:00:000</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="clear">Clear</string>
    <string name="exit">Exit Now</string>

</resources>
